[project]
name = "comfyui_fill-nodes"
description = "VFX nodes, Shaders, Utilities, Mask tools, Prompting Tools, and much more!"
version = "1.0.2"
license = "LICENSE"
dependencies = ["librosa", "sounddevice", "glitch_this"]

[project.urls]
Repository = "https://github.com/filliptm/ComfyUI_Fill-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "machinedelusions"
DisplayName = "ComfyUI_Fill-Nodes"
Icon = ""
